# ai-platform

docs/: USERMANUAL.md
services/agent-simulation/: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
services/agent-simulation/agent_simulation_engine/: __init__.py  client.py  exceptions.py  models.py
services/agent-simulation/agent_simulation_engine/resources/: __init__.py  dashboard.py  environments.py  evaluation_runs.py  evaluations.py  hardening.py  jobs.py  personas.py  scenarios.py  simulations.py
services/agent-simulation/assets/: .gitignore
services/crawl/: .dockerignore  .env.example  .gitignore  .railway.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docs.go  entrypoint.sh  go.mod  go.sum  init-mongo.js  init.sh  main.go  rabbitmq.conf  run.sh  server.go
services/crawl/config/: database.go  rabbitmq.go  scrapeops.go
services/crawl/docs/: docs.go  swagger.json  swagger.yaml
services/crawl/handlers/: content.go  crawl.go  health.go  jobs.go  websocket.go
services/crawl/middleware/: auth.go  logging.go
services/crawl/models/: content.go  crawl.go  events.go  job.go  sitemap.go
services/crawl/services/: browserpool.go  content_helpers.go  content_processor.go  crawler.go  database.go  messaging.go  robots.go  sitemap.go  stealth.go  workerpool.go
services/crawl/ui/: index.html
services/crawl/utils/: url.go
services/gateway/: .htpasswd  Dockerfile  nginx.conf
services/governor/: Dockerfile  LICENSE  README.md  pyproject.toml
services/perplexity-backend/: Dockerfile  RETRY_INTEGRATION_EXAMPLE.md  build-prod.sh  prod.Dockerfile  pyproject.toml  requirements.txt  test_agent_manager.py
services/perplexity-backend/src/: agent_search.py  auth.py  chat.py  main.py  prompts.py  related_queries.py  retry_utils.py  schemas.py  utils.py
services/perplexity-backend/src/api_compat/: __init__.py  endpoints.py  middleware.py  schemas.py  transform.py
services/perplexity-backend/src/config/: __init__.py  agent_manager.py
services/perplexity-backend/src/llm/: __init__.py  agent_config.py  base.py  lyzr_agent.py  openai_llm.py
services/perplexity-backend/src/search/: search_service.py
services/perplexity-backend/src/search/providers/: searxng.py
services/perplexity-frontend/: next.config.mjs
services/perplexity-frontend/src/app/: page.tsx
services/perplexity-frontend/src/contexts/: AuthContext.tsx
services/searxng/: Dockerfile  entrypoint.sh  limiter.toml  railway.toml  settings.yml
services/skills-kit/: Dockerfile
services/skills-kit/lyzr-kit/: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
services/skills-kit/lyzr-skills/: .gitignore  README.md
(+1840 files in other folders)
